# MediaVerifyBot

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  README.md  alembic.ini  api_tunnel.txt  appwrite-migration.md  commit_generator.py  docker-compose.yml  instuction.md  miniapp_prompts.md  miniapp_tunnel.txt  pyproject.toml  requirements.txt  sprint1_spec.md  start-miniapp.ps1
.github/workflows/: deploy.yml
adapters/: base.py  hf_audio.py  hf_image.py  resemble.py  sapling.py  sightengine.py  video_pipeline.py
api/: dependencies.py  main.py  schemas.py
api/routers/: analyze.py  auth.py  bigcheck.py  health.py  user.py
benchmarks/g4f/: g4f_benchmark_partial.csv  g4f_benchmark_partial.json  g4f_benchmark_partial_models.csv  g4f_benchmark_partial_models.json  g4f_benchmark_results.csv  g4f_benchmark_results.json  g4f_benchmarker.py  generate_tables.py  models_table.md  providers_table.md  working_models.md
bot/: main.py
bot/handlers/: bigcheck.py  media.py  text_check.py
bot/keyboards/: inline.py
bot/utils/: formatters.py
core/: analyzer.py  config.py  enums.py  exceptions.py
db/: engine.py  models.py  repository.py
migrations/: env.py
miniapp/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
router/: media_router.py
src/: main.py
tests/: conftest.py  e2e_test.py
web/: 404.html  about.html  appwrite.json  appwrite.yaml  config.js  dashboard.html  docs.html  faq.html  index.html  package-lock.json  package.json  privacy.html  tailwind.config.js  terms.html  vite.config.ts
(+103 files in other folders)
