[project]
name = "mediaverifybot"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aiogram==3.7.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "ffmpeg-python==0.2.0",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require real API keys and network access",
]
